fix popup z-index

--- a/quilt-sync/src/assets/css/views/popup.css
+++ b/quilt-sync/src/assets/css/views/popup.css
@@ -22,7 +22,7 @@
   right: 0;
   bottom: 0;
   pointer-events: none;
-  z-index: 10;
+  z-index: 100;
 
   &:has(.root:not(:empty)) {
     pointer-events: auto;
